--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,9 @@ tasks.withType(ScalaCompile){
 
 dependencies{
     compile 'org.scala-lang:scala-library:2.12.6'
+    compile "io.monix:monix_2.12:3.0.0-RC1"
     compile 'org.typelevel:cats-core_2.12:1.4.0'
+    compile "org.scalaz:scalaz-core_2.12:7.2.26"
 
 
 }
